<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sunrise</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>

    <string name="menu_item_title_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!--Pref label-->
    <string name="pref_location_label">Location</string>
    <string name="pref_units_label">Units</string>

    <!--Pref keys-->
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_units_key" translatable="false">units</string>

    <!--Pref values-->
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="pref_location_default" translatable="false">94043</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_sync">last_sync</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!--Pref keys-->
    <array name="pref_units_value">
        <item>metric</item>
        <item>imperial</item>
    </array>

    <!--Pref values-->
    <array name="pref_units_options">
        <item>Metric</item>
        <item>Imperial</item>
    </array>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>

    <!-- Temperature formats -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed format in mph [CHAR LIMIT=NONE] -->
    <string name="format_wind_mph">Wind: <xliff:g id="wind_speed">
        %1.0f</xliff:g> mph <xliff:g id="wind_dir">%2$s</xliff:g></string>

    <!-- Windspeed format in km/h [CHAR LIMIT=NONE] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="wind_speed">
        %1.0f</xliff:g> km/h <xliff:g id="wind_dir">%2$s</xliff:g></string>

    <!-- Pressure format in hPa [CHAR LIMIT=NONE] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format in % [CHAR LIMIT=NONE] -->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">tom.udacity.sample.sunrise.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
</resources>
