<!--
  ~ Copyright (c) 2015. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <EditTextPreference
      android:key="@string/pref_location_key"
      android:title="@string/pref_location_label"
      android:defaultValue="@string/pref_location_default"
      android:inputType="text"
      android:singleLine="true"/>

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label"
        android:defaultValue="@string/pref_units_metric"
        android:entryValues="@array/pref_units_value"
        android:entries="@array/pref_units_options"
        />

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>
